JSFUNIT-252 Pre-release cleanup
git-svn-id: https://svn.jboss.org/repos/jsfunit/trunk@517 992343fe-802f-0410-85da-d31fbad5f0a6